Fix Firefox logo alignment.

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -169,13 +169,15 @@ a
 
   > div
     @extend %page
-    padding: 20px 0
+    position: relative
+    top: 20px
 
   a
     position: relative
     width: 150px
     height: 79px
     overflow: hidden
+    display: block
 
   // Dark and light
   a > div
